--- a/src/locale/lang/pt.json
+++ b/src/locale/lang/pt.json
@@ -8,7 +8,8 @@
 	"languageText": "Idioma",
 	"preferences": {
 		"installPlugin": "Instalar um Plugin",
-		"wipeLibrary": "Apagar a Biblioteca"
+		"wipeLibrary": "Apagar a Biblioteca",
+		"saveText": "Salvar"
 	},
 	"library": {
 		"add": "Adicionar",
