--- a/src/locale/lang/hu.json
+++ b/src/locale/lang/hu.json
@@ -13,7 +13,7 @@
     },
     "library": {
         "add": "Hozzáadás",
-        "playtime": "Játszott órák száma",
+        "playtime": "óra játszva",
         "editGame": "Szerkesztés",
         "deleteGame": "Törlés",
         "run": "Futtatás"
