--- a/src/locale/lang/en.json
+++ b/src/locale/lang/en.json
@@ -1,28 +1,19 @@
 {
-	"homeText": "Home",
 	"browseText": "Browse",
 	"libraryText": "Library",
-	"downloadsText": "Downloads",
 	"prefsText": "Preferences",
 	"loadingText": "Loading",
 	"languageText": "Language",
 	"preferences": {
 		"installPlugin": "Install a plugin",
 		"wipeLibrary": "Wipe library",
-		"saveText": "Save"
+		"saveText": "Save",
+		"availablePlugins": "Available plugins"
 	},
 	"library": {
-		"add": "Add",
-		"playtime": "hours played",
-		"editGame": "Edit",
-		"deleteGame": "Delete",
-		"run": "Run"
+		"run": "Run",
+		"searchGame": "Browse"
 	},
-	"home": {
-		"welcomeText": "Welcome to Project Black Pearl",
-		"changelogText": "Changelog: "
-	},
-	"downloads": {},
 	"browse": {
 		"selectPlugin": "Select a plugin",
 		"nothingFound": "No games found",
