--- a/src/locale/lang/en.json
+++ b/src/locale/lang/en.json
@@ -1,42 +1,31 @@
 {
-	"homeText": "Home",
 	"browseText": "Browse",
 	"libraryText": "Library",
-	"downloadsText": "Downloads",
 	"prefsText": "Preferences",
 	"loadingText": "Loading",
 	"languageText": "Language",
 	"preferences": {
 		"installPlugin": "Install a plugin",
 		"wipeLibrary": "Wipe library",
-		"saveText": "Save"
+		"saveText": "Save",
+		"availablePlugins": "Available plugins"
 	},
 	"library": {
-		"add": "Add",
-		"playtime": "hours played",
-		"editGame": "Edit",
-		"deleteGame": "Delete",
-		"run": "Run"
+		"run": "Run",
+		"searchGame": "Browse"
 	},
-	"home": {
-		"welcomeText": "Welcome to Project Black Pearl",
-		"changelogText": "Changelog: "
-	},
-	"downloads": {},
 	"browse": {
 		"selectPlugin": "Select a plugin",
 		"nothingFound": "No games found",
 		"downloadText": "Download",
 		"search": "Search"
 	},
-	"modals": {
-		"newGame": {
-			"gameTitle": "Title",
-			"addExec": "Add executable",
-			"none": "None",
-			"addImg": "Add Image",
-			"desc": "Description",
-			"done": "Done"
-		}
+	"newGame": {
+		"gameTitle": "Title",
+		"addExec": "Add executable",
+		"none": "None",
+		"addImg": "Add Image",
+		"desc": "Description",
+		"done": "Done"
 	}
 }
