--- a/src/locale/languages.json
+++ b/src/locale/languages.json
@@ -1,25 +1,1 @@
-[
-	"English",
-	"Português (Portugal)",
-	"Português (Brasil)",
-	"Deutsch",
-	"Esperanto",
-	"Magyar",
-	"Svenska",
-	"Français",
-	"Eesti",
-	"العربية",
-	"Suomi",
-	"Polski",
-	"Hrvatski",
-	"Bosanski",
-	"Čeština",
-	"Italiano",
-	"Latviešu",
-	"Nederlands",
-	"Русский",
-	"Српски језик",
-	"Türkçe",
-	"Română",
-	"български език"
-]
+["English"]
