--- a/src/locale/lang/ba.json
+++ b/src/locale/lang/ba.json
@@ -1,42 +1,40 @@
 {
-	"homeText": "Početna stranica",
-	"browseText": "Pretraži",
-	"libraryText": "Datoteka",
-	"downloadsText": "Preuzimanja",
-	"prefsText": "Preferencije",
-	"loadingText": "Učitavanje",
-	"languageText": "Jezik",
-	"preferences": {
-		"installPlugin": "Instaliraj dodatak",
-		"wipeLibrary": "Obriši datoteku",
-		"saveText": "Spasi"
-	},
-	"library": {
-		"add": "Dodaj",
-		"playtime": "sati provedeno u igri",
-		"editGame": "Uredi",
-		"deleteGame": "Izbriši",
-		"run": "Pokreni"
-	},
-	"home": {
-		"welcomeText": "Dobrodošli u Project Black Pearl",
-		"changelogText": "Dnevnik izmjena: "
-	},
-	"downloads": {},
-	"browse": {
-		"selectPlugin": "Odaberi dodatak",
-		"nothingFound": "Nijedna igra nije pronađena",
-		"downloadText": "Preuzmi",
-		"search": "Pretraži"
-	},
-	"modals": {
-		"newGame": {
-			"gameTitle": "Naslov",
-			"addExec": "Dodaj izvršnu komandu",
-			"none": "Ništa",
-			"addImg": "Dodaj sliku",
-			"desc": "Opis",
-			"done": "Završeno"
-		}
-	}
+    "browseText": "Pretraga",
+    "libraryText": "Datoteke",
+    "prefsText": "Postavke",
+    "loadingText": "Učitavanje",
+    "languageText": "Jezik",
+    "preferences": {
+        "installPlugin": "Instaliraj dodatak",
+        "wipeLibrary": "Izbriši sve datoteke",
+        "saveText": "Spasi",
+        "availablePlugins": "Dostupni dodaci",
+        "comingSoon": "Dolazi uskoro..."
+    },
+    "library": {
+        "run": "Pokreni",
+        "searchGame": "Traži"
+    },
+    "browse": {
+        "selectPlugin": "Odaberi dodatak",
+        "nothingFound": "Ništa nije pronađeno",
+        "downloadText": "Preuzmi",
+        "search": "Traži"
+    },
+    "modals": {
+        "newGame": {
+            "gameTitle": "Naziv igre",
+            "addExec": "Dodaj .exe igre",
+            "none": "Ništa",
+            "addImg": "Dodaj sliku",
+            "desc": "Opis",
+            "done": "Završi",
+            "autoFetch": "Nađi podatke o igri"
+        },
+        "fetchMeta": {
+            "selectGame": "Odaberi igru"
+        }
+    },
+    "pluginText": "Dodaci",
+    "themeText": "Pozadine"
 }
