--- a/src/locale/lang/hr.json
+++ b/src/locale/lang/hr.json
@@ -1,42 +1,40 @@
 {
-	"homeText": "Početna stranica",
-	"browseText": "Pretražuj",
-	"libraryText": "Datoteka",
-	"downloadsText": "Preuzimanje",
-	"prefsText": "Preferense",
-	"loadingText": "Učitavanje",
-	"languageText": "Jezik",
-	"preferences": {
-		"installPlugin": "Instaliraj proširenje",
-		"wipeLibrary": "Obriši datoteku",
-		"saveText": "Spasi"
-	},
-	"library": {
-		"add": "Dodaj",
-		"playtime": "sati provedeno u igri",
-		"editGame": "Uredi",
-		"deleteGame": "Obriši",
-		"run": "Pokreni"
-	},
-	"home": {
-		"welcomeText": "Dobrodošli u Project Black Pearl",
-		"changelogText": "Dnevnik izmjena: "
-	},
-	"downloads": {},
-	"browse": {
-		"selectPlugin": "Odaberi proširenje",
-		"nothingFound": "Nije pronađena nijedna igra",
-		"downloadText": "Preuzmi",
-		"search": "Pretraži"
-	},
-	"modals": {
-		"newGame": {
-			"gameTitle": "Naslov",
-			"addExec": "Dodaj komandu",
-			"none": "Ništa",
-			"addImg": "Dodaj sliku",
-			"desc": "Opis",
-			"done": "Završi"
-		}
-	}
+    "browseText": "Pretražuj",
+    "libraryText": "Datoteka",
+    "prefsText": "Postavke",
+    "loadingText": "Učitavanje",
+    "languageText": "Jezik",
+    "preferences": {
+        "installPlugin": "Instaliraj proširenje",
+        "wipeLibrary": "Obriši datoteke",
+        "saveText": "Spasi",
+        "availablePlugins": "Dostupna proširenja",
+        "comingSoon": "Dolazi uskoro..."
+    },
+    "library": {
+        "run": "Pokreni",
+        "searchGame": "Pretraži"
+    },
+    "browse": {
+        "selectPlugin": "Odaberi proširenje",
+        "nothingFound": "Nije pronađena nijedna igra",
+        "downloadText": "Preuzmi",
+        "search": "Pretraži"
+    },
+    "modals": {
+        "newGame": {
+            "gameTitle": "Naslov igre",
+            "addExec": "Dodaj komandu",
+            "none": "Ništa",
+            "addImg": "Dodaj sliku",
+            "desc": "Opis",
+            "done": "Završi",
+            "autoFetch": "Dobavi podatke o igri"
+        },
+        "fetchMeta": {
+            "selectGame": "Odaberi igru"
+        }
+    },
+    "pluginText": "Proširenja",
+    "themeText": "Pozadine"
 }
