--- a/src/locale/lang/ar.json
+++ b/src/locale/lang/ar.json
@@ -1,42 +1,40 @@
 {
-	"homeText": "الصفحة الرئيسية",
-	"browseText": "تصفح",
-	"libraryText": "المكتبة",
-	"downloadsText": "التنزيلات",
-	"prefsText": "الإعدادات",
-	"loadingText": "تحميل",
-	"languageText": "اللغة",
-	"preferences": {
-		"installPlugin": "تثبيت اضافة",
-		"wipeLibrary": "حذف المكتبة",
-		"saveText": "حفظ"
-	},
-	"library": {
-		"add": "اضافة",
-		"playtime": "ساعات اللعب",
-		"editGame": "تعديل",
-		"deleteGame": "حذف",
-		"run": "تشغيل"
-	},
-	"home": {
-		"welcomeText": "اهلاً في مشروع اللؤلؤة السوداء",
-		"changelogText": "التغييرات: "
-	},
-	"downloads": {},
-	"browse": {
-		"selectPlugin": "اختيار اضافة",
-		"nothingFound": "لا توجد العاب",
-		"downloadText": "تحميل",
-		"search": "بحث"
-	},
-	"modals": {
-		"newGame": {
-			"gameTitle": "عنوان",
-			"addExec": "اضافة امر قابل للتنفيذ",
-			"none": "لا شيء",
-			"addImg": "اضافة صورة",
-			"desc": "وصف",
-			"done": "مُنجز"
-		}
-	}
+    "browseText": "تصفح",
+    "libraryText": "مكتبة",
+    "prefsText": "التفضيلات",
+    "loadingText": "تحميل",
+    "languageText": "اللغة",
+    "preferences": {
+        "installPlugin": "تثبيت إضافة",
+        "wipeLibrary": "امسح المكتبة",
+        "saveText": "إحفظ",
+        "availablePlugins": "الإضافة المتوفرة",
+        "comingSoon": "قريبا..."
+    },
+    "library": {
+        "run": "تشغيل",
+        "searchGame": "إبحث"
+    },
+    "browse": {
+        "selectPlugin": "إختر إضافة",
+        "nothingFound": "لم يتم العثور على شيء",
+        "downloadText": "تحميل",
+        "search": "إبحث"
+    },
+    "modals": {
+        "newGame": {
+            "gameTitle": "العنوان",
+            "addExec": "أضف",
+            "none": "لا شيء",
+            "addImg": "أضف صورة",
+            "desc": "الوصف",
+            "done": "انتهى",
+            "autoFetch": "إجلب البيانات الوصاية"
+        },
+        "fetchMeta": {
+            "selectGame": "إختر لعبة"
+        }
+    },
+    "pluginText": "الإضافة",
+    "themeText": "نمودج"
 }
