Added partial steam support

--- a/src/locale/lang/en.json
+++ b/src/locale/lang/en.json
@@ -4,6 +4,7 @@
     "prefsText": "Preferences",
     "loadingText": "Loading",
     "languageText": "Language",
+    "steamLoginText": "Steam",
     "preferences": {
         "installPlugin": "Install a plugin",
         "wipeLibrary": "Wipe library",
@@ -14,7 +15,9 @@
             "version": "Version:",
             "author": "Author:",
             "desc": "Description:"
-        }
+        },
+        "steamLogin": "Login With Steam",
+        "steamUnlink": "Unlink Steam"
     },
     "library": {
         "run": "Run",
