strip entire plugin system

--- a/src/locale/languages.json
+++ b/src/locale/languages.json
@@ -1,10 +1,13 @@
 [
-	"English (US)",
-	"Português (Brasil)",
-	"Deutsch",
-	"العربية",
-	"Hrvatski",
-	"Bosanski",
-	"Српски",
-	"Lietuvių"
+    "English (US)",
+    "Português (Brasil)",
+    "Deutsch",
+    "العربية",
+    "Hrvatski",
+    "Bosanski",
+    "Српски",
+    "Lietuvių",
+    "Afrikaans",
+    "Esperanto",
+    "Polski"
 ]
