Add new translation keys

--- a/src/locale/lang/af.json
+++ b/src/locale/lang/af.json
@@ -14,7 +14,9 @@
             "version": "Weergawe:",
             "author": "Outeur:",
             "desc": "Beskrywing:"
-        }
+        },
+        "resetToDefault": "Reset to default",
+        "suppressUpdater": "Suppress updater"
     },
     "library": {
         "run": "Uitvoer",
