--- a/src/locale/lang/ar.json
+++ b/src/locale/lang/ar.json
@@ -14,7 +14,9 @@
             "version": "الإصدار:",
             "author": "المؤلف:",
             "desc": "الوصف:"
-        }
+        },
+        "resetToDefault": "Reset to default",
+        "suppressUpdater": "Suppress updater"
     },
     "library": {
         "run": "تشغيل",
