--- a/src/locale/lang/de.json
+++ b/src/locale/lang/de.json
@@ -14,7 +14,9 @@
             "version": "Version:",
             "author": "Autor:",
             "desc": "Beschreibung:"
-        }
+        },
+        "resetToDefault": "Zurücksetzen",
+        "suppressUpdater": "Updater stummschalten"
     },
     "library": {
         "run": "Ausführen",
