Remove unused strings

--- a/src/locale/lang/de.json
+++ b/src/locale/lang/de.json
@@ -32,7 +32,7 @@
         "newGame": {
             "gameTitle": "Titel",
             "addExec": "Anwendung hinzufügen",
-            "none": "Kein(e)",
+            "none": "Ohne",
             "addImg": "Bild hinzufügen",
             "desc": "Beschreibung",
             "done": "Fertig",
