Removed ddl ref in english locale file

--- a/src/locale/lang/en.json
+++ b/src/locale/lang/en.json
@@ -23,7 +23,7 @@
     "browse": {
         "selectPlugin": "Select a plugin",
         "nothingFound": "Nothing Found",
-        "downloadText": "Download (DDL)",
+        "downloadText": "Download",
         "downloadTextMagnet": "Download (Magnet)",
         "search": "Search"
     },
